MyProject/force-app/main/default/objects/Order_ext__x/fields/EmployeeID__c.field-meta.xml
<CustomField>
    <fullName>EmployeeID__c</fullName>
    <description>EmployeeID</description>
    <externalDeveloperName>EmployeeID</externalDeveloperName>
    <label>EmployeeID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>