MyProject/force-app/main/default/objects/Order_ext__x/fields/ShipCountry__c.field-meta.xml
<CustomField>
    <fullName>ShipCountry__c</fullName>
    <description>ShipCountry</description>
    <externalDeveloperName>ShipCountry</externalDeveloperName>
    <label>ShipCountry</label>
    <length>128</length>
    <type>Text</type>
</CustomField>