MyProject/force-app/main/default/objects/Order_ext__x/fields/ShippedDate__c.field-meta.xml
<CustomField>
    <fullName>ShippedDate__c</fullName>
    <description>ShippedDate</description>
    <externalDeveloperName>ShippedDate</externalDeveloperName>
    <label>ShippedDate</label>
    <type>DateTime</type>
</CustomField>